Bug 28772 - uninit value in strpool.c breaks build on uclibc
Summary: uninit value in strpool.c breaks build on uclibc
Status: RESOLVED FIXED
Alias: None
Product: libatasmart
Classification: Unclassified
Component: library (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact: Lennart Poettering
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-26 12:44 UTC by Gianluigi Tiesi
Modified: 2011-04-05 10:46 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
proposed patch (566 bytes, application/octet-stream)
2010-06-26 12:44 UTC, Gianluigi Tiesi
Details

Description Gianluigi Tiesi 2010-06-26 12:44:00 UTC
Created attachment 36525 [details]
proposed patch

I've noticed a bug when running strpool on uclibc,
fill_idx skips an item if i->suffix_of == NULL

but at lineno 420 (current git) suffix_of is not initialized to NULL

attached patch fixes the problem
Comment 1 Lennart Poettering 2011-04-05 10:46:14 UTC
Thanks. Applied.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.