strpool: initialize i->suffix_of to NULL

https://bugs.freedesktop.org/show_bug.cgi?id=28772